PIRANHA-1296 Prevent "Add New Metadata" from jumping on separate line

--- a/site/modules/machine/static/css/main.css
+++ b/site/modules/machine/static/css/main.css
@@ -299,10 +299,6 @@
     border-bottom: 0;
 }
 
-.tag.tag-add .btn-link {
-    margin-right: 10px;
-}
-
 .required-asterix {
     color : #ff6600;
 }
